Implementação das operações de role e segurança seguindo padrão de camadas

--- a/src/Infrastructure/Email/Templates/PasswordRecovery.html
+++ b/src/Infrastructure/Email/Templates/PasswordRecovery.html
@@ -28,12 +28,12 @@
                                                         </tr>
                                                     </tbody>
                                                 </table>
-                                            </div>;
+                                            </div>
                                             <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;">Este link expira em 24 horas</p>
                                             <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;">Caso não consiga acessar, copie e cole o endereço a seguir no seu navegador e prossiga com a definição de senha:</p>
                                             <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;"><a href="{FullLink}" target="_blank">{FullLink}</a></p>
                                             <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;">Caso você não tenha solicitado a redefinição de senha, por favor, ignore este email.</p>                                            
-                                            <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;">Atenciosamente, Sample Security Provider.</p>
+                                            <p style="font-size:14px;padding-right:30px;padding-left:30px;margin-top:20px;margin-bottom:20px;">Atenciosamente, Auth Hub.</p>
                                         </div>
                                     </td>
                                 </tr>
