Implementação do fluxo de login

--- a/src/Runtime.WebApp/src/app/app.component.html
+++ b/src/Runtime.WebApp/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+@if (authService.isLoggedIn$ | async) {
+    <main-layout/>
+} @else {
+    <router-outlet/>
+}
+<p-toast position="bottom-center"></p-toast>
