--- a/src/Runtime.WebApp/src/styles.scss
+++ b/src/Runtime.WebApp/src/styles.scss
@@ -4,7 +4,6 @@
 
 * {
     box-sizing: border-box;
-    font-family: var(--font-family);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -14,6 +13,7 @@ body {
     width: 100vw;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 :root {
