--- a/src/Runtime.WebApp/src/app/modules/users/components/list-users/list-users.component.html
+++ b/src/Runtime.WebApp/src/app/modules/users/components/list-users/list-users.component.html
@@ -9,8 +9,9 @@
             <input
                 pInputText
                 type="text"
-                (input)="dt2.filterGlobal($event.target['value'], 'contains')"
-                placeholder="Search keyword"
+                [ngModel]="query"
+                (ngModelChange)="onQueryChange($event)"
+                placeholder="Pesquisar"
             />
         </p-iconfield>
     </ng-template>
@@ -19,39 +20,70 @@
     </ng-template>
 </p-toolbar>
 
-<p-table
-    #dt2
-    dataKey="a"
-    [value]="users"
-    [rows]="1"
-    [rowHover]="true"
-    [paginator]="true"
-    [globalFilterFields]="['a', 'b']"
->
-    <ng-template #header>
-        <tr>
-            <th pSortableColumn="a">Nome  <p-sortIcon field="a"/></th>
-            <th pSortableColumn="b">Nome de usuário  <p-sortIcon field="b"/></th>
-            <th pSortableColumn="c">Email  <p-sortIcon field="c"/></th>
-            <th pSortableColumn="d">Ativo  <p-sortIcon field="d"/></th>
-            <th pSortableColumn="e">Ações  <p-sortIcon field="e"/></th>
-        </tr>
-    </ng-template>
-    <ng-template #body let-item>
-        <tr>
-            <td>{{ item.a }}</td>
-            <td>{{ item.b }}</td>
-            <td>{{ item.c }}</td>
-            <td>{{ item.d }}</td>
-            <td>{{ item.e }}</td>
-        </tr>
-    </ng-template>
-    <ng-template #emptymessage>
-        <tr>
-            <td colspan="5">No customers found.</td>
-        </tr>
-    </ng-template>
-    <ng-template #summary>
-        <div class="flex items-center justify-between">No total, existem 4 usuários.</div>
-    </ng-template>
-</p-table>
+<div style="width: 100%; height: calc(100% - 178px)" >
+    <p-table [value]="[1, 1, 1, 1, 1]">
+        <ng-template #header>
+            <tr>
+                <th class="p-2"><p-skeleton height="38px"/></th>
+                <th class="p-2"><p-skeleton height="38px"/></th>
+                <th class="p-2"><p-skeleton height="38px"/></th>
+                <th class="p-2"><p-skeleton height="38px"/></th>
+                <th class="p-2"><p-skeleton height="38px"/></th>
+            </tr>
+        </ng-template>
+        <ng-template #body>
+            <tr>
+                <th class="px-1 py-1"><p-skeleton height="30px"/></th>
+                <th class="px-1 py-1"><p-skeleton height="30px"/></th>
+                <th class="px-1 py-1"><p-skeleton height="30px"/></th>
+                <th class="px-1 py-1"><p-skeleton height="30px"/></th>
+                <th class="px-1 py-1"><p-skeleton height="30px"/></th>
+            </tr>
+        </ng-template>
+    </p-table>
+
+    <p-table
+        dataKey="id"
+        [value]="users$.asObservable() | async"
+        [loading]="loading$.asObservable() | async"
+        [rowHover]="true"
+        [paginator]="true"
+        [first]="skip"
+        [rows]="limit"
+        [rowsPerPageOptions]="[5, 10]"
+        [totalRecords]="totalRecords$.asObservable() | async"
+        [showCurrentPageReport]="true"
+        [currentPageReportTemplate]="'Exibindo {first} a {last} de {totalRecords} registros'"
+        [scrollable]="true"
+        [scrollHeight]="'flex'"
+        [lazy]="true"
+        (onLazyLoad)="onLazyLoad($event)"
+    >
+        <ng-template #header>
+            <tr>
+                <th pSortableColumn="displayName">Nome  <p-sortIcon field="displayName"/></th>
+                <th pSortableColumn="username">Nome de usuário  <p-sortIcon field="username"/></th>
+                <th pSortableColumn="email">Email  <p-sortIcon field="email"/></th>
+                <th pSortableColumn="active">Ativo  <p-sortIcon field="active"/></th>
+                <th>Ações</th>
+            </tr>
+        </ng-template>
+        <ng-template #body let-item>
+            <tr>
+                <td>{{ item.displayName }}</td>
+                <td>{{ item.username }}</td>
+                <td>{{ item.email }}</td>
+                <td>{{ item.active }}</td>
+                <td>Ações</td>
+            </tr>
+        </ng-template>
+        <ng-template #emptymessage>
+            <tr>
+                <td colspan="5">Nenhum usuário encontrado.</td>
+            </tr>
+        </ng-template>
+        <ng-template #loadingbody>
+
+        </ng-template>
+    </p-table>
+</div>
